--- a/index.html
+++ b/index.html
@@ -1,10 +1,86 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Sebastián Romero Cruz</title>
-    </head>
-    <body>
-        <h1>What's up my dudes.</h1>
-    </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Overpass Font -->
+    <link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/133d39255b.js" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <title>Sebastián Romero Cruz</title>
+</head>
+
+<body>
+    <section id="main">
+        <div class="container-fluid">
+
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <!-- Brand -->
+                <a class="navbar-brand" href="sebastianromerocruz.github.io"><i class="site-logo fas fa-ghost"></i></a>
+
+                <!-- Toggler -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarToggler">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="navbar-item">
+                            <a class="nav-link" href="#">résumé</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a class="nav-link" href="#">contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <!-- Landing Page -->
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1>hi, i'm <a class="hover-photo-text" id="profile">sebastián</a></h1>
+                    <p>
+                        i am a nyc-based professor and front-end developer.
+                    </p>
+                    <p>
+                        i was born in mexico city, and studied chemical engineering and later computer science at nyu.
+                    </p>
+                    <p>
+                        quantitative as my training may be, i like to be as creative in my work as i can, bringing in inspiration from a number of other crafts.
+                    </p>
+                    <p>
+                        outside of work, some of my interests involve learning other languages, music, and kyūdō.
+                    </p>
+                    <p>
+                        you can find me on instagram shooting on cheap disposable cameras, or on linkedin if you're more into that sort of thing.
+                    </p>
+                </div>
+                <div class="col-lg-6 landing-picture">
+                    <img src="images/main-portrait.jpg" alt="landing-picture" class="landing-picture">
+                </div>
+            </div>
+
+        </div>
+    </section>
+</body>
+
 </html>
