--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Overpass Font -->
+    <!-- Overpass and Noto Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/133d39255b.js" crossorigin="anonymous"></script>
@@ -55,32 +56,154 @@
             </nav>
 
             <!-- Landing Page -->
+
+            <!-- Resume -->
+            <!-- <div class="">
+                Hello
+            </div> -->
+
+            <!-- Landing Page -->
             <div class="row">
                 <div class="col-lg-6">
-                    <h1>hi, i'm <a class="hover-photo-text" id="profile">sebastián</a></h1>
-                    <p>
-                        i am a nyc-based professor and front-end developer.
+                    <h1 id="title">hi, i'm <span class="hover-photo-text" id="profile">sebastián</span></h1>
+                    <p id="intro">
+                        i am a nyc-based <span class="hover-photo-text" id="front-end">front-end</span> developer.
                     </p>
-                    <p>
-                        i was born in mexico city, and studied chemical engineering and later computer science at nyu.
+                    <p id="vocation">
+                        i was born in <span class="hover-photo-text" id="mexico">mexico city</span>, and studied <span class="hover-photo-text" id="cbe">chemical and biomolecular engineering</span> and later computer science at <span
+                            class="hover-photo-text" id="nyu">nyu</span>.
                     </p>
-                    <p>
+                    <p id="explanation">
                         quantitative as my training may be, i like to be as creative in my work as i can, bringing in inspiration from a number of other crafts.
                     </p>
-                    <p>
-                        outside of work, some of my interests involve learning other languages, music, and kyūdō.
+                    <p id="hobbies">
+                        outside of work, some of my interests involve learning other <span class="hover-photo-text" id="japanese">languages</span>, music, and kyūdō.
                     </p>
-                    <p>
+                    <p id="contact">
                         you can find me on instagram shooting on cheap disposable cameras, or on linkedin if you're more into that sort of thing.
                     </p>
+                    <p id="resume">
+                        you can also check my résumé out <span>here</span>.
+                    </p>
                 </div>
-                <div class="col-lg-6 landing-picture">
-                    <img src="images/main-portrait.jpg" alt="landing-picture" class="landing-picture">
+                <div class="col-lg-6">
+                    <!-- Landing pictures -->
+                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture d-none">
+
+                    <!-- Progress bar stuff -->
+                    <div class="container-fluid technical-skills">
+                        <h3>technical skills</h3>
+                        <hr>
+                        <p>languages</p>
+                        <div class="row">
+                            <div class="col-sm-2"></div>
+                            <div class="col-sm-10">
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="ranking text-left">lo</p>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <p class="ranking text-center">med</p>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <p class="ranking text-right">hi</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-2"><i class="fab fa-python fa-2x skill-logo"></i></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar python-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">python</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-2"><i class="fab fa-html5 fa-2x skill-logo"></i></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar html-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">html</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-2"><i class="fab fa-css3-alt fa-2x skill-logo"></i></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar css-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">css</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-2"><i class="fab fa-js-square fa-2x skill-logo"></i></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar js-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">javascript</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-2"><i class="fab fa-java fa-2x skill-logo"></i></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar java-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">java</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-2"><p class="skill-logo">C#</p></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar c-sharp-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">C#</div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <p>frameworks</p>
+                        <div class="row">
+                            <div class="col-sm-2"><i class="fab fa-bootstrap fa-2x skill-logo"></i></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar bootstrap-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">bootstrap</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-2"><p class="skill-logo">jQ</p></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar jquery-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">jQuery</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-2"><p class="skill-logo">D3</p></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar d3-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">d3.js</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-
         </div>
     </section>
+
+    <!-- Javascript files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="index.js">
+
+    </script>
 </body>
 
 </html>
