Returned functionality to pictures. Now hovering over the developer part will show the animation of the progress bars from start

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="col-lg-6">
                     <h1 id="title">hi, i'm <span class="hover-photo-text" id="profile">sebastián</span></h1>
                     <p id="intro">
-                        i am a nyc-based <span class="hover-photo-text" id="front-end">front-end</span> developer.
+                        i am a nyc-based professor and <span class="hover-photo-text" id="developer">developer</span>.
                     </p>
                     <p id="vocation">
                         i was born in <span class="hover-photo-text" id="mexico">mexico city</span>, and studied <span class="hover-photo-text" id="cbe">chemical and biomolecular engineering</span> and later computer science at <span
@@ -88,10 +88,10 @@
                 </div>
                 <div class="col-lg-6">
                     <!-- Landing pictures -->
-                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture d-none">
+                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture">
 
                     <!-- Progress bar stuff -->
-                    <div class="container-fluid technical-skills">
+                    <div class="container-fluid technical-skills d-none">
                         <h3>technical skills</h3>
                         <hr>
                         <p>languages</p>
@@ -109,6 +109,7 @@
                                         <p class="ranking text-right">hi</p>
                                     </div>
                                 </div>
+                                <hr class="ranking-rule">
                             </div>
                         </div>
                         <div class="row">
@@ -165,7 +166,7 @@
                             </div>
                         </div>
                         <hr>
-                        <p>frameworks</p>
+                        <p>frameworks and libraries</p>
                         <div class="row">
                             <div class="col-sm-2"><i class="fab fa-bootstrap fa-2x skill-logo"></i></div>
                             <div class="col-sm-10">
