Added education section as a click element...but might have to be changed to a hover later for better UX tbh

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav ml-auto">
                         <li class="navbar-item">
-                            <a class="nav-link" href="#">résumé</a>
+                            <a class="nav-link" href="#">Résumé</a>
                         </li>
                         <li class="navbar-item">
-                            <a class="nav-link" href="#">contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -65,25 +65,26 @@
             <!-- Landing Page -->
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 id="title">hi, i'm <span class="hover-photo-text" id="profile">sebastián</span></h1>
+                    <h1 id="title">Hi, I'm <span class="hover-photo-text" id="profile">Sebastián.</span></h1>
                     <p id="intro">
-                        i am a nyc-based professor and <span class="hover-photo-text" id="developer">developer</span>.
+                        I am a NYC-based professor and <span class="hover-photo-text" id="developer">developer</span>.
                     </p>
                     <p id="vocation">
-                        i was born in <span class="hover-photo-text" id="mexico">mexico city</span>, and studied <span class="hover-photo-text" id="cbe">chemical and biomolecular engineering</span> and later computer science at <span
-                            class="hover-photo-text" id="nyu">nyu</span>.
+                        I was born in <span class="hover-photo-text" id="mexico">Mexico City</span>, and later studied at <span
+                            class="hover-photo-text" id="nyu">NYU</span>.
                     </p>
                     <p id="explanation">
-                        quantitative as my training may be, i like to be as creative in my work as i can, bringing in inspiration from a number of other crafts.
+                        Quantitative as my training may be, I like to be as creative in my work as I can, bringing in inspiration from a number of other crafts.
                     </p>
                     <p id="hobbies">
-                        outside of work, some of my interests involve learning other <span class="hover-photo-text" id="japanese">languages</span>, music, and kyūdō.
+                        Outside of work, some of my interests involve learning other <span class="hover-photo-text" id="japanese">languages</span>, music, and kyūdō.
                     </p>
                     <p id="contact">
-                        you can find me on instagram shooting on cheap disposable cameras, or on linkedin if you're more into that sort of thing.
+                        You can find me on <a class="hover-photo-text" href="https://www.instagram.com/ghstpkmn/">Instagram</a> shooting on cheap disposable cameras, or on <a class="hover-photo-text"
+                            href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a> if you're more into that sort of thing.
                     </p>
                     <p id="resume">
-                        you can also check my résumé out <span>here</span>.
+                        You can also check my résumé out <span>here</span>.
                     </p>
                 </div>
                 <div class="col-lg-6">
@@ -158,7 +159,9 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-2"><p class="skill-logo">C#</p></div>
+                            <div class="col-sm-2">
+                                <p class="skill-logo">C#</p>
+                            </div>
                             <div class="col-sm-10">
                                 <div class="progress">
                                     <div class="progress-bar c-sharp-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">C#</div>
@@ -177,7 +180,9 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-2"><p class="skill-logo">jQ</p></div>
+                            <div class="col-sm-2">
+                                <p class="skill-logo">jQ</p>
+                            </div>
                             <div class="col-sm-10">
                                 <div class="progress">
                                     <div class="progress-bar jquery-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">jQuery</div>
@@ -186,7 +191,9 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-2"><p class="skill-logo">D3</p></div>
+                            <div class="col-sm-2">
+                                <p class="skill-logo">D3</p>
+                            </div>
                             <div class="col-sm-10">
                                 <div class="progress">
                                     <div class="progress-bar d3-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">d3.js</div>
@@ -195,8 +202,57 @@
                         </div>
                     </div>
 
+                    <!-- Education -->
+                    <div class="education text-center d-none">
+                        <p class="click-text">click us!</p>
+                        <a class="btn btn-primary edu-button" data-toggle="collapse" href="#msc" role="button" aria-expanded="false" aria-controls="msc">master of science</a>
+                        <button class="btn btn-primary edu-button" type="button" data-toggle="collapse" data-target="#bsc" aria-expanded="false" aria-controls="bsc">bachelor of science</button>
+                        <div class="row">
+                            <div class="collapse" id="msc">
+                                <div class="card card-body">
+                                    <div class="row align-items-center">
+                                        <div class="col-4">
+                                            <img src="images/nyu-logo.png" class="card-img-top nyu-logo rounded mx-auto d-block" alt="nyu-logo">
+                                        </div>
+                                        <div class="col-8">
+                                            <h5 class="card-title">computer science</h5>
+                                        </div>
+                                    </div>
+
+                                    <hr>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">tandon school of engineering, <em>class of 2020</em></li>
+                                        <li class="list-group-item"><strong>GPA</strong>: 3.8</li>
+                                    </ul>
+
+                                </div>
+
+                            </div>
+                            <div class="collapse" id="bsc">
+                                <div class="card card-body">
+                                    <div class="row align-items-center">
+                                        <div class="col-4">
+                                            <img src="images/nyu-logo.png" class="card-img-top nyu-logo rounded mx-auto d-block" alt="nyu-logo">
+                                        </div>
+                                        <div class="col-8">
+                                            <h5 class="card-title">chemical and biomolecular engineering</h5>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">tandon school of engineering, <em>class of 2017</em></li>
+                                        <li class="list-group-item"><strong>GPA</strong>: 3.4</li>
+                                    </ul>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
+        </div>
         </div>
     </section>
 
