Added animation and basic design to D3.js map

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         I am a NYC-based professor and <span class="hover-photo-text" id="developer">developer</span>.
                     </p>
                     <p id="vocation">
-                        I was born in <span class="hover-photo-text" id="mexico">Mexico City</span>, and later studied at <span
+                        I was born in <span class="hover-photo-text" id="mexico">Mexico City</span>, and later <span class="hover-photo-text" id ="moved">moved</span> to New York, where I studied at <span
                             class="hover-photo-text" id="nyu">NYU</span>.
                     </p>
                     <p id="explanation">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-lg-6">
                     <!-- Landing pictures -->
-                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture d-none">
+                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture">
 
                     <!-- Progress bar stuff -->
                     <div class="container-fluid technical-skills d-none">
@@ -274,8 +274,8 @@
                     </div>
 
                     <!-- Maps -->
-                    <div class="map">
-                        <svg id="my_dataviz"width="440" height="600"></svg>
+                    <div class="map d-none">
+                        <svg id="d3-map" width="440" height="600"></svg>
                     </div>
                 </div>
 
