Provisionally finished the 'moved' map, with an 8-bit style. Might change the colour palettes depending on the feedback I get.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Overpass and Noto Fonts -->
+    <!-- Overpass, Noto, and VT323 Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/133d39255b.js" crossorigin="anonymous"></script>
@@ -70,8 +71,7 @@
                         I am a NYC-based professor and <span class="hover-photo-text" id="developer">developer</span>.
                     </p>
                     <p id="vocation">
-                        I was born in <span class="hover-photo-text" id="mexico">Mexico City</span>, and later <span class="hover-photo-text" id ="moved">moved</span> to New York, where I studied at <span
-                            class="hover-photo-text" id="nyu">NYU</span>.
+                        I was born in <span class="hover-photo-text" id="mexico">Mexico City</span>, and later <span class="hover-photo-text" id="moved">moved</span> to New York, where I studied at <span class="hover-photo-text" id="nyu">NYU</span>.
                     </p>
                     <p id="explanation">
                         Quantitative as my training may be, I like to be as creative in my work as I can, bringing in inspiration from a number of other crafts.
@@ -93,9 +93,9 @@
 
                     <!-- Progress bar stuff -->
                     <div class="container-fluid technical-skills d-none">
-                        <h3>technical skills</h3>
+                        <h3>Technical Skills</h3>
                         <hr>
-                        <p>languages</p>
+                        <p>Languages</p>
                         <div class="row">
                             <div class="col-sm-2"></div>
                             <div class="col-sm-10">
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                         <hr>
-                        <p>frameworks and libraries</p>
+                        <p>Frameworks and Libraries</p>
                         <div class="row">
                             <div class="col-sm-2"><i class="fab fa-bootstrap fa-2x skill-logo"></i></div>
                             <div class="col-sm-10">
@@ -266,10 +266,11 @@
                             私の趣味は、<span class="hover-photo-text japanese-text" style="color: #ffc2c2; border-bottom: solid 0px;">外国語</span>の学習、音楽、そして弓道です。
                         </p>
                         <p class="japanese-text">
-                            使い捨てカメラを使ってますけど<a class="hover-photo-text japanese-text" href="https://www.instagram.com/ghstpkmn/">Instagram</a>も<a class="hover-photo-text japanese-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a>もやっています。
+                            使い捨てカメラを使ってますけど<a class="hover-photo-text japanese-text" href="https://www.instagram.com/ghstpkmn/">Instagram</a>も<a class="hover-photo-text japanese-text"
+                                href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a>もやっています。
                         </p>
                         <p class="japanese-text">
-                            私の<span class = "hover-photo-text japanese-text">履歴書</span>にご興味のある方はぜひご覧になって下さい。
+                            私の<span class="hover-photo-text japanese-text">履歴書</span>にご興味のある方はぜひご覧になって下さい。
                         </p>
                     </div>
 
@@ -288,6 +289,13 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <script src="https://d3js.org/d3-color.v1.min.js"></script>
+    <script src="https://d3js.org/d3-dispatch.v1.min.js"></script>
+    <script src="https://d3js.org/d3-ease.v1.min.js"></script>
+    <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+    <script src="https://d3js.org/d3-selection.v1.min.js"></script>
+    <script src="https://d3js.org/d3-timer.v1.min.js"></script>
+    <script src="https://d3js.org/d3-transition.v1.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="index.js"></script>
