Turned education section into a two carded format, not animated. Might change that later. Also added a kyudo gif for that. Make sure to fix the sizing issues on each photo. Provisional solution in place for now with the 'responsive' class

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         Quantitative as my training may be, I like to be as creative in my work as I can, bringing in inspiration from a number of other crafts.
                     </p>
                     <p id="hobbies">
-                        Outside of work, some of my interests involve learning other <span class="hover-photo-text" id="japanese">languages</span>, music, and kyūdō.
+                        Outside of work, some of my interests involve learning other <span class="hover-photo-text" id="japanese">languages</span>, music, and <span class="hover-photo-text" id="kyudo">kyūdō</span>.
                     </p>
                     <p id="contact">
                         You can find me on <a class="hover-photo-text" href="https://www.instagram.com/ghstpkmn/">Instagram</a> shooting on cheap disposable cameras, or on <a class="hover-photo-text"
@@ -87,9 +87,9 @@
                         You can also check my résumé out <span>here</span>.
                     </p>
                 </div>
-                <div class="col-lg-6">
+                <div class="responsive col-lg-6">
                     <!-- Landing pictures -->
-                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture">
+                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture img-fluid">
 
                     <!-- Progress bar stuff -->
                     <div class="container-fluid technical-skills d-none">
@@ -204,43 +204,46 @@
 
                     <!-- Education -->
                     <div class="education text-center d-none">
-                        <p class="click-text">click us!</p>
+                        <!-- <p class="click-text">click us!</p>
                         <a class="btn btn-primary edu-button" data-toggle="collapse" href="#msc" role="button" aria-expanded="false" aria-controls="msc">master of science</a>
-                        <button class="btn btn-primary edu-button" type="button" data-toggle="collapse" data-target="#bsc" aria-expanded="false" aria-controls="bsc">bachelor of science</button>
+                        <button class="btn btn-primary edu-button" type="button" data-toggle="collapse" data-target="#bsc" aria-expanded="false" aria-controls="bsc">bachelor of science</button> -->
                         <div class="row">
-                            <div class="collapse" id="msc">
+                            <div class="" id="msc">
                                 <div class="card card-body">
-                                    <div class="row align-items-center">
+                                    <div class="edu-header row align-items-center">
                                         <div class="col-4">
                                             <img src="images/nyu-logo.png" class="card-img-top nyu-logo rounded mx-auto d-block" alt="nyu-logo">
                                         </div>
                                         <div class="col-8">
-                                            <h5 class="card-title">computer science</h5>
+                                            <h5 class="card-title">Computer Science</h5>
                                         </div>
                                     </div>
-
-                                    <hr>
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">tandon school of engineering, <em>class of 2020</em></li>
+                                        <li class="list-group-item">
+                                            Master of Science
+                                        </li>
+                                        <li class="list-group-item">Tandon School of Engineering, <em>Class of 2020</em></li>
                                         <li class="list-group-item"><strong>GPA</strong>: 3.8</li>
                                     </ul>
 
                                 </div>
 
                             </div>
-                            <div class="collapse" id="bsc">
+                            <div class="" id="bsc">
                                 <div class="card card-body">
                                     <div class="row align-items-center">
                                         <div class="col-4">
                                             <img src="images/nyu-logo.png" class="card-img-top nyu-logo rounded mx-auto d-block" alt="nyu-logo">
                                         </div>
                                         <div class="col-8">
-                                            <h5 class="card-title">chemical and biomolecular engineering</h5>
+                                            <h5 class="card-title">Chemical and Biomolecular Engineering</h5>
                                         </div>
                                     </div>
-                                    <hr>
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">tandon school of engineering, <em>class of 2017</em></li>
+                                        <li class="list-group-item">
+                                            Bachelor of Sciece
+                                        </li>
+                                        <li class="list-group-item">Tandon School of Engineering, <em>Class of 2017</em></li>
                                         <li class="list-group-item"><strong>GPA</strong>: 3.4</li>
                                     </ul>
 
