Temporary fix to the image centering issue. Will try again tomorrow.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <!-- Landing Page -->
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 .d-flex .justify-content-center .align-items-center-center">
                     <h1 id="title">Hi, I'm <span class="hover-photo-text" id="profile">Sebastián.</span></h1>
                     <p id="intro">
                         I am a NYC-based professor and <span class="hover-photo-text" id="developer">developer</span>.
@@ -89,7 +89,10 @@
                 </div>
                 <div class="responsive col-lg-6">
                     <!-- Landing pictures -->
-                    <img src="images/profile.jpg" alt="landing-picture" class="landing-picture img-fluid">
+                    <div class="img-container text-center p-1">
+                        <img src="images/profile.jpg" alt="landing-picture" class="center-block landing-picture img-fluid">
+                    </div>
+
 
                     <!-- Progress bar stuff -->
                     <div class="container-fluid technical-skills d-none">
