Improved centering of langing pictures. Still would be better to get universal sizes, but this works for now. Also refactored index.js a LOT, making it a lot more modular and readable in terms of adding listeners

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <div class="col-lg-6 .d-flex .justify-content-center .align-items-center-center">
                     <h1 id="title">Hi, I'm <span class="hover-photo-text" id="profile">Sebastián.</span></h1>
                     <p id="intro">
-                        I am a NYC-based professor and <span class="hover-photo-text" id="developer">developer</span>.
+                        I am a NYC-based professor and <span class="hover-photo-text" id="technical-skills">developer</span>.
                     </p>
                     <p id="vocation">
-                        I was born in <span class="hover-photo-text" id="mexico">Mexico City</span>, and later <span class="hover-photo-text" id="moved">moved</span> to New York, where I studied at <span class="hover-photo-text" id="nyu">NYU</span>.
+                        I was born in <span class="hover-photo-text" id="mexico">Mexico City</span>, and later <span class="hover-photo-text" id="moved">moved</span> to New York, where I studied at <span class="hover-photo-text" id="education">NYU</span>.
                     </p>
                     <p id="explanation">
                         Quantitative as my training may be, I like to be as creative in my work as I can, bringing in inspiration from a number of other crafts.
@@ -87,9 +87,9 @@
                         You can also check my résumé out <span>here</span>.
                     </p>
                 </div>
-                <div class="responsive col-lg-6">
+                <div class="col-lg-6">
                     <!-- Landing pictures -->
-                    <div class="img-container text-center p-1">
+                    <div class="img-container text-center pt-5">
                         <img src="images/profile.jpg" alt="landing-picture" class="center-block landing-picture img-fluid">
                     </div>
 
@@ -258,7 +258,7 @@
 
                     <!-- Japanese -->
                     <div class="japanese d-none">
-                        <h1>Hi, I'm <span class="hover-photo-text">Sebastián</span></h1>
+                        <h1>Hi, I'm <span class="hover-photo-text">Sebastián.</span> 🇯🇵</h1>
                         <p class="japanese-text">
                             NYCで、大学教授兼フロントエンド<span class="hover-photo-text japanese-text">開発者</span>として働いています。
                         </p>
